# QuickScr-be

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  api-design.md  architecture.md  docker-compose.yml  main.bicep  mysql.sql  next.config.mjs  package-lock.json  package.json  playwright.config.ts  postgresql.sql  sqlserver.sql  start-backend.cmd  start-frontend.cmd  tailwind.config.ts  tsconfig.json  uat-scenarios.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: analyze.py  health.py
backend/app/core/: config.py  logging.py  security.py
backend/app/domain/: __init__.py  schemas.py
backend/app/repositories/: analysis_repository.py
backend/app/services/: accuracy.py  ai_agent_blueprint.py  api_designer.py  architecture.py  data_modeling.py  document_parser.py  integration_design.py  nagare.py  requirement_engineering.py  solution_orchestrator.py
backend/tests/: test_api.py  test_data_modeling.py  test_document_parser.py  test_requirement_engineering.py  test_security.py
