[project]
name = "quickscribe-backend"
version = "0.1.0"
description = "Enterprise accelerator for turning BRDs, SOPs, SAP, SharePoint, and Nagare documents into implementation artifacts."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "tenacity>=8.5.0",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "langchain>=0.2.10",
  "langgraph>=0.1.15",
  "openai>=1.40.0",
  "chromadb>=0.5.5",
  "pinecone-client>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "mypy>=1.11.0"
]
documents = [
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
